--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -3,22 +3,23 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" FontSize="13"
+        mc:Ignorable="d" FontSize="16"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Orientation="Horizontal">
-            <TextBlock Margin="5" VerticalAlignment="Center">源目录</TextBlock>
-            <TextBox Margin="5" Width="200"/>
-            <TextBlock Margin="5" VerticalAlignment="Center">目标目录</TextBlock>
-            <TextBox Margin="5" Width="200"/>
-            <Button Margin="5" Padding="5">映射</Button>
-        </StackPanel>
+            <TextBlock Margin="5" VerticalAlignment="Center"  Grid.Row="0" Grid.Column="0">源目录</TextBlock>
+        <TextBox Margin="5" HorizontalAlignment="Stretch"  Name="TxtLink" Grid.Row="0" Grid.Column="1" Height="30"/>
+        <TextBlock Margin="5" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0">目标目录</TextBlock>
+        <TextBox Margin="5" HorizontalAlignment="Stretch" Name="TxtTarget" Grid.Row="1" Grid.Column="1" Height="30"/>
+        <Button Margin="5" Padding="5" Name="BtnMove" Click="BtnMove_OnClick" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Top">移动</Button>
     </Grid>
 </Window>
