--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -2,24 +2,45 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" FontSize="16"
+        mc:Ignorable="d" FontSize="16" Loaded="MainWindow_OnLoaded"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
+        <ListView Grid.Column="0" ItemsSource="{Binding LinkedDirs}">
+            <ListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="200"/>
+                    </GridView.Columns>
+                </GridView>
+            </ListView.View>
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <i:InvokeCommandAction Command="{Binding ChangedCommand}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </ListView>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="5*"/>
+            </Grid.ColumnDefinitions>
             <TextBlock Margin="5" VerticalAlignment="Center"  Grid.Row="0" Grid.Column="0">源目录</TextBlock>
-        <TextBox Margin="5" HorizontalAlignment="Stretch"  Name="TxtLink" Grid.Row="0" Grid.Column="1" Height="30"/>
-        <TextBlock Margin="5" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0">目标目录</TextBlock>
-        <TextBox Margin="5" HorizontalAlignment="Stretch" Name="TxtTarget" Grid.Row="1" Grid.Column="1" Height="30"/>
-        <Button Margin="5" Padding="5" Name="BtnMove" Click="BtnMove_OnClick" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Top">移动</Button>
+            <TextBox Margin="5" HorizontalAlignment="Stretch"  Name="TxtLink" Grid.Row="0" Grid.Column="1" Height="30"/>
+            <TextBlock Margin="5" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0">目标目录</TextBlock>
+            <TextBox Margin="5" HorizontalAlignment="Stretch" Name="TxtTarget" Grid.Row="1" Grid.Column="1" Height="30"/>
+            <Button Margin="5" Padding="5" Name="BtnMove" Click="BtnMove_OnClick" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Top">移动</Button>
+        </Grid>
     </Grid>
 </Window>
