--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -4,29 +4,35 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" FontSize="16" Loaded="MainWindow_OnLoaded"
-        Title="MainWindow" Height="450" Width="800">
+        mc:Ignorable="d" FontSize="16"
+        Title="MainWindow" Height="800" Width="900" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <ListView Grid.Column="0" ItemsSource="{Binding LinkedDirs}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <ListView Grid.Row="0" ItemsSource="{Binding LinkedDirs}" Name="LvLinks" SelectedItem="{Binding SelectedDir}" SelectionMode="Single">
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
+                        <GridViewColumn Header="Id" DisplayMemberBinding="{Binding Id}" Width="0"/>
+                        <GridViewColumn Header="App" DisplayMemberBinding="{Binding App}" Width="200"/>
                         <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="200"/>
                     </GridView.Columns>
                 </GridView>
             </ListView.View>
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
-                    <i:InvokeCommandAction Command="{Binding ChangedCommand}" />
+                    <i:InvokeCommandAction Command="{Binding ChangedCommand}" CommandParameter="{Binding SelectedDir}" />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </ListView>
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="0" Grid.Row="1">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -36,11 +42,15 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="5*"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Margin="5" VerticalAlignment="Center"  Grid.Row="0" Grid.Column="0">源目录</TextBlock>
-            <TextBox Margin="5" HorizontalAlignment="Stretch"  Name="TxtLink" Grid.Row="0" Grid.Column="1" Height="30"/>
-            <TextBlock Margin="5" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0">目标目录</TextBlock>
-            <TextBox Margin="5" HorizontalAlignment="Stretch" Name="TxtTarget" Grid.Row="1" Grid.Column="1" Height="30"/>
-            <Button Margin="5" Padding="5" Name="BtnMove" Click="BtnMove_OnClick" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Top">移动</Button>
-        </Grid>
+            <TextBlock Margin="5" VerticalAlignment="Center"  Grid.Row="0" Grid.Column="0">App Name</TextBlock>
+            <TextBox Margin="5" HorizontalAlignment="Stretch"  Name="TxtName" Grid.Row="0" Grid.Column="1" Height="30" Text="{Binding SelectedDir.Link}"/>
+
+            <TextBlock Margin="5" VerticalAlignment="Center"  Grid.Row="1" Grid.Column="0">Source </TextBlock>
+            <TextBox Margin="5" HorizontalAlignment="Stretch"  Name="TxtLink" Grid.Row="1" Grid.Column="1" Height="30" Text="{Binding SelectedDir.Link}"/>
+
+            <TextBlock Margin="5" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0">Target</TextBlock>
+            <TextBox Margin="5" HorizontalAlignment="Stretch" Name="TxtTarget" Grid.Row="2" Grid.Column="1" Height="30" Text="{Binding SelectedDir.Target}"/>
+
+            <Button Margin="5" Padding="5" Name="BtnMove" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Top" Command="{Binding MoveCommand}">Move</Button></Grid>
     </Grid>
 </Window>
