--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -46,29 +46,37 @@
                 <ColumnDefinition Width="5*"/>
             </Grid.ColumnDefinitions>
             <TextBlock Margin="5" VerticalAlignment="Center"  Grid.Row="0" Grid.Column="0">App Name</TextBlock>
-            <TextBox Margin="5" HorizontalAlignment="Stretch"  Name="TxtName" Grid.Row="0" Grid.Column="1" Height="30" Text="{Binding SelectedDir.Link}"/>
+            <TextBox Margin="5" HorizontalAlignment="Stretch"  Name="TxtName" Grid.Row="0" Grid.Column="1" Height="30" Text="{Binding CurrentLinkedDir.App, Mode=TwoWay}"/>
 
             <TextBlock Margin="5" VerticalAlignment="Center"  Grid.Row="1" Grid.Column="0">Source</TextBlock>
-            <TextBox Margin="5" HorizontalAlignment="Stretch"  Name="TxtLink" Grid.Row="1" Grid.Column="1" Height="30" Text="{Binding SelectedDir.Link}"/>
+            <TextBox Margin="5" HorizontalAlignment="Stretch"  Name="TxtLink" Grid.Row="1" Grid.Column="1" Height="30" Text="{Binding CurrentLinkedDir.Link,Mode=TwoWay}"/>
 
             <TextBlock Margin="5" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0">Target</TextBlock>
-            <TextBox Margin="5" HorizontalAlignment="Stretch" Name="TxtTarget" Grid.Row="2" Grid.Column="1" Height="30" Text="{Binding SelectedDir.Target}"/>
+            <TextBox Margin="5" HorizontalAlignment="Stretch" Name="TxtTarget" Grid.Row="2" Grid.Column="1" Height="30" Text="{Binding CurrentLinkedDir.Target}"/>
 
             <TextBlock Margin="5" VerticalAlignment="Center" Grid.Row="3" Grid.Column="0">Method</TextBlock>
             <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                <RadioButton Margin="5,5,60,5" VerticalAlignment="Center" VerticalContentAlignment="Center" IsChecked="{Binding SelectedDir.Type, Converter={StaticResource enumBooleanConverter}, ConverterParameter=D}">/D symbolic link</RadioButton>
-                <RadioButton Margin="5" VerticalAlignment="Center" VerticalContentAlignment="Center" IsChecked="{Binding SelectedDir.Type, Converter={StaticResource enumBooleanConverter}, ConverterParameter=J}">/J junction</RadioButton>
+                <RadioButton Margin="5,5,60,5" VerticalAlignment="Center" VerticalContentAlignment="Center" GroupName="a" IsChecked="{Binding CurrentLinkedDir.Type, Converter={StaticResource enumBooleanConverter}, ConverterParameter=D}" Content="/D symbolic link"/>
+
+                <RadioButton Margin="5" VerticalAlignment="Center" VerticalContentAlignment="Center" GroupName="a" IsChecked="{Binding CurrentLinkedDir.Type, Converter={StaticResource enumBooleanConverter}, ConverterParameter=J}" Content="/J junction"/>
             </StackPanel>
 
-            <UniformGrid Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Columns="4" Margin="5">
-                <Button Margin="5" Padding="5" Name="BtnMove"  HorizontalAlignment="Center" VerticalAlignment="Top" Command="{Binding MoveCommand}">OK</Button>
-                <Button Margin="5" Padding="5" Name="BtnMove1"  HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Top" Command="{Binding MoveCommand}" Content="Delete Link"/>
+            <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Orientation="Horizontal">
+                <StackPanel.Resources>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Margin" Value="140,5,5,5"/>
+                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                        <Setter Property="VerticalAlignment" Value="Top"/>
+                        <Setter Property="Padding" Value="5"/>
+                    </Style>
+                </StackPanel.Resources>
+                <Button Name="BtnMove" Command="{Binding NewLinkedDirCommand}" Content="New Link"/>
 
-                <Button Margin="5" Padding="5" Name="BtnMove2"  HorizontalAlignment="Center" VerticalAlignment="Top" Command="{Binding MoveCommand}" Content="Cancel Link"></Button>
+                <Button Name="BtnUpdate"   Command="{Binding MoveCommand}" Content="Move" />
 
-                <Button Margin="5" Padding="5" Name="BtnMove3"  HorizontalAlignment="Center" VerticalAlignment="Top" Command="{Binding MoveCommand}">Delete Backup</Button>
+                <Button Name="BtnCancel"  Command="{Binding CancelCommand}" Content="Cancel Link" ToolTip="Delete the link and move the dir to original place"/>
 
-            </UniformGrid>
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
