--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UsingDotNET.DirMover.Views.MainWindow"
+﻿<Window x:Class="UsingDotNET.DirMover.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -54,7 +54,7 @@
             <TextBlock Margin="5" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0">Target</TextBlock>
             <TextBox Margin="5" HorizontalAlignment="Stretch" Name="TxtTarget" Grid.Row="2" Grid.Column="1" Height="30" Text="{Binding CurrentLinkedDir.Target}"/>
 
-            <TextBlock Margin="5" VerticalAlignment="Center" Grid.Row="3" Grid.Column="0" Text="Type"/>
+            <TextBlock Margin="5" VerticalAlignment="Center" Grid.Row="3" Grid.Column="0">Method</TextBlock>
             <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="5">
                 <RadioButton Margin="5,5,60,5" VerticalAlignment="Center" VerticalContentAlignment="Center" GroupName="a" IsChecked="{Binding CurrentLinkedDir.Type, Converter={StaticResource enumBooleanConverter}, ConverterParameter=D}" Content="/D symbolic link"/>
 
