1.use DataGrid to show data 2. Add dir size column

--- a/src/App.xaml
+++ b/src/App.xaml
@@ -6,6 +6,7 @@
     <Application.Resources>
         <converts:EnumBooleanConverter x:Key="enumBooleanConverter" />
         <converts:EnumConverter x:Key="enumConverter" />
+        <converts:SizeConverter x:Key="sizeConverter" />
         <Style TargetType="Button">
             <Setter Property="MinWidth" Value="120"/>
             <Setter Property="MinHeight" Value="60"/>
