Change textbox's backgroud if dir not exist

--- a/src/App.xaml
+++ b/src/App.xaml
@@ -7,6 +7,7 @@
         <converts:EnumBooleanConverter x:Key="enumBooleanConverter" />
         <converts:EnumConverter x:Key="enumConverter" />
         <converts:SizeConverter x:Key="sizeConverter" />
+        <converts:ExistToBrushConverter x:Key="existToBrushConverter" />
         <Style TargetType="Button">
             <Setter Property="MinWidth" Value="120"/>
             <Setter Property="MinHeight" Value="60"/>
